# django-choices-js

./: .gitignore  LICENSE  README.rst  pyproject.toml
django_choices_js/: __init__.py  apps.py  forms.py  models.py  urls.py  views.py
django_choices_js/static/: django-choices.css  django-choices.js
docs/: conf.py  django_choices_js.rst  index.rst
docs/_static/: custom.css
example/: Dockerfile  docker-compose.yml
example/example/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
example/example/migrations/: 0001_initial.py  0002_create_demo_objects.py
example/example/templates/example/: choices.html  collection_form.html  frame.html
scripts/: download_choices.sh
